--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="A quiz to check how much you have been paying attention in sound training!">
   <link href="style.css" rel="stylesheet" type="text/css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+  <script src="quizContent.js"></script>
 </head>
 
 <body>
@@ -17,19 +17,18 @@
       <a href="index.html"><img class="logo" src="https://image.flaticon.com/icons/png/512/27/27130.png" alt="headphone icon"></a>
     </div>
     <div class="scoreboard">
-      <p>Question: 0/10 Score: 0</p>
     </div>
   </header>
   <main>
     <div class="quiz-start">
-      <h1>Start Quiz</h1>
-      <button type="button" class="quizButton">Start button</button>
+      <h1>Let's see how much you know</h1>
+      <button type="button" class="quizButton">Start</button>
     </div>
     <div class="quiz-form">
-      
+
     </div>
   </main>
-
+<script src="index.js"></script>
 </body>
 
 </html>
