fixed form html issue

--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
   </header>
   <main>
     <div class="quiz-start">
-      <h1>Let's see how much you know</h1>
+      <h1>Sound Quiz</h1>
+      <h4>Let's see how much you know!</h4>
       <button type="button" class="quizButton">Start</button>
     </div>
     <div class="quiz-form">
 
     </div>
   </main>
-<script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
